# bless-it

./: CLAUDE.md  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_workflow_runs.sql  002_pending_gates.sql  003_traceability.sql  004_schedules.sql
src-tauri/resources/default-skills/browser-sites/admin.microsoft.com/: SKILL.md
src-tauri/resources/default-skills/browser-sites/app.slack.com/: SKILL.md
src-tauri/resources/default-skills/browser-sites/atlassian.net/: SKILL.md
src-tauri/resources/default-skills/browser-sites/github.com/: SKILL.md
src-tauri/resources/default-skills/browser-sites/linear.app/: SKILL.md
src-tauri/resources/default-skills/browser-sites/mail.google.com/: SKILL.md
src-tauri/resources/default-skills/browser-sites/okta.com/: SKILL.md
src-tauri/resources/default-skills/it-support-triage/: SKILL.md
src-tauri/resources/default-skills/workflow-creator/: SKILL.md
src-tauri/resources/default-workflows/: jira-create-ticket.workflow.json
src-tauri/sidecar/browser/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src-tauri/sidecar/browser/scripts/: build-sidecar.mjs
src-tauri/sidecar/browser/src/: index.ts  log.ts  sessions.ts  site-profiles.ts  snapshot.ts
src-tauri/src/: audit_log.rs  browser_capability.rs  browser_classify.rs  browser_commands.rs  execute_command.rs  lib.rs  scanner.rs  shell_classify.rs  skills.rs  web_search.rs  workflow_db.rs  workflow_recorder.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/ai/providers/: llamacpp.rs  ollama.rs  openai_compatible.rs
src-tauri/src/partition/: move_partition.rs
(+48 files in other folders)
