[package]
name = "ittoolkit"
version = "0.2.0"
description = "A Tauri App"
authors = ["pesnik"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
jwalk = "0.8"
rayon = "1.10.0"
lazy_static = "1.5.0"
walkdir = "2.5.0"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2"
regex = "1"
chrono = "0.4"
num_cpus = "1.0"
anyhow = "1.0"
bytes = "1.5"
futures-util = "0.3"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
dirs = "5.0"
fs_extra = "1.3"
serde_yaml = "0.9"
slug = "0.1"
rusqlite = { version = "0.39", features = ["bundled", "serde_json"] }


# Partition Management
gptman = "1.0"  # GPT partition table parsing
mbrman = "0.5"  # MBR partition table parsing
thiserror = "2.0"  # Error handling

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_WindowsProgramming",
    "Win32_System_Com",
] }
wmi = "0.14"  # Windows Management Instrumentation
